--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    height: 100%;
     margin: 0;
     padding: 0;
     background-color: #e6faff;
@@ -9,18 +10,39 @@ body {
 header {
     background-color: #00bcd4;
     color: white;
-    padding: 1.5em 0;
-    text-align: center;
     border-bottom: 5px solid #008b9e;
-    position: sticky;
+    display: flex;
+    flex-wrap: wrap;
+    position: fixed;
     top: 0;
+    left: 0;
+    width: 100%;
+    height: 15vh;
     z-index: 1000;
+    transition: transform 0.3s ease-in-out;
 }
 
-header h1 {
+div.half{
+    height: 50%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+div.color{
+    background-color: #0097a7;
+}
+
+header.hide {
+    transform: translateY(-100%);
+}
+
+h1 {
     margin: 0;
     font-size: 2em;
     letter-spacing: 1px;
+    text-align: center;
 }
 
 nav {
@@ -28,8 +50,6 @@ nav {
     text-align: center;
     padding: 0.8em 0;
     box-shadow: inset 0 -1px 2px rgba(0,0,0,0.05);
-    position: sticky;
-    top: 0;
 }
 
 nav a {
@@ -41,6 +61,7 @@ nav a {
     border-radius: 10px;
     transition: background-color 0.3s;
     background-color: transparent;
+    width: 15%;
 }
 
 nav a:hover {
@@ -52,7 +73,7 @@ main {
     max-width: 900px;
     margin: auto;
     background: white;
-    margin-top: 20px;
+    margin-top: 17vh;
     border-radius: 20px;
     box-shadow: 0 0 15px rgba(0, 188, 212, 0.1);
 }
