--- a/style.css
+++ b/style.css
@@ -105,19 +105,8 @@ ul li {
     font-size: 1.05em;
     color: #006064;
     line-height: 1.6;
-}
-
-ul li::before {
-    content: '';
-    position: absolute;
-    left: 0.3em;
-    top: 0.7em;
-    width: 0.7em;
-    height: 0.7em;
-    background: linear-gradient(135deg, #00bcd4 60%, #0097a7 100%);
-    border-radius: 50%;
-    box-shadow: 0 1px 4px rgba(0,188,212,0.10);
-    display: inline-block;
+    list-style: none;
+    list-style: none;
 }
 
 .card-container {
